Add background color, set up Poppins font and apply to page

--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
 
     <title>Spots</title>
   </head>
-  <body></body>
+  <body>
+    <div class="page">
+      <header class="header">
+        <main class="content">
+          <section class="profile">Hello World</section>
+          <section class="cards"></section>
+        </main>
+        <footer class="footer"></footer>
+      </header>
+    </div>
+  </body>
 </html>
