--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--fill in-->
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="An interactive social media web application where users can post to their profile and like others photos"
+    />
     <meta name="author" content="Link Nelson" />
     <meta name="keywords" content="HTML, CSS, Image sharing" />
     <link rel="stylesheet" href="./pages/index.css" />
