Fix elements nested in header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--fill in-->
     <meta
       name="description"
       content="An interactive social media web application where users can post to their profile and like others photos"
@@ -17,13 +16,12 @@
   </head>
   <body>
     <div class="page">
-      <header class="header">
-        <main class="content">
-          <section class="profile">Hello World</section>
-          <section class="cards"></section>
-        </main>
-        <footer class="footer"></footer>
-      </header>
+      <header class="header"></header>
+      <main class="content">
+        <section class="profile">Hello World</section>
+        <section class="cards"></section>
+      </main>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
