--- a/index.html
+++ b/index.html
@@ -16,9 +16,34 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <img
+          src="./images/spots-images/logo.svg"
+          alt="Spots logo"
+          class="header__logo"
+        />
+      </header>
       <main class="content">
-        <section class="profile">Hello World</section>
+        <section class="profile">
+          <img
+            src="../se_project_spots/images/spots-images/avatar.jpg"
+            alt="Profile image"
+            class="profile__avatar"
+          />
+          <div class="profile__column">
+            <h1 class="profile__name">Bessie Coleman</h1>
+            <p class="profile__description">Civil Aviator</p>
+            <button class="profile__edit-btn">
+              <img
+                src="./images/spots-images/pencil.svg"
+                alt="Pencil icon"
+              />Edit Profile
+            </button>
+          </div>
+          <button class="profile__new-post">
+            <img src="./images/spots-images/plus.svg" alt="Plus icon" />New Post
+          </button>
+        </section>
         <section class="cards"></section>
       </main>
       <footer class="footer"></footer>
