Center content reset margins add border and padding to profile

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         />
       </header>
       <main class="content">
-        <section class="profile">
+        <section class="profile page__section">
           <img
-            src="../se_project_spots/images/spots-images/avatar.jpg"
+            src="./images/spots-images/avatar.jpg"
             alt="Profile image"
             class="profile__avatar"
           />
