Create media queries for screen size up to 780px

--- a/index.html
+++ b/index.html
@@ -33,18 +33,22 @@
           <div class="profile__column">
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
-            <button class="profile__edit-btn">
+            <button type="button" class="profile__edit-btn">
               <img
                 src="./images/spots-images/pencil.svg"
                 alt="Pencil icon"
               />Edit Profile
             </button>
           </div>
-          <button class="profile__new-post">
+          <button type="button" class="profile__new-post">
             <img src="./images/spots-images/plus.svg" alt="Plus icon" />New Post
           </button>
         </section>
-        <section class="cards"></section>
+        <section class="cards">
+          <ul class="cards__list">
+            <li class="card__image"></li>
+          </ul>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
