Import card.css add border radius to card image and format card with div for content

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/spots-images/avatar.jpg"
+            src="./images/avatar.jpg"
             alt="Profile image"
             class="profile__avatar"
           />
@@ -34,19 +34,26 @@
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
-              <img
-                src="./images/spots-images/pencil.svg"
-                alt="Pencil icon"
-              />Edit Profile
+              <img src="./images/pencil.svg" alt="Pencil icon" />Edit Profile
             </button>
           </div>
           <button type="button" class="profile__new-post">
-            <img src="./images/spots-images/plus.svg" alt="Plus icon" />New Post
+            <img src="./images/plus.svg" alt="Plus icon" />New Post
           </button>
         </section>
         <section class="cards">
           <ul class="cards__list">
-            <li class="card__image"></li>
+            <li class="card">
+              <img
+                src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
+                alt="Val Thorens"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Val Thorens</h2>
+                <button type="button" class="card__heart-icon"></button>
+              </div>
+            </li>
           </ul>
         </section>
       </main>
