Card grid set up

--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
   <body>
     <div class="page">
       <header class="header">
-        <img
-          src="./images/spots-images/logo.svg"
-          alt="Spots logo"
-          class="header__logo"
-        />
+        <img src="./images/logo.svg" alt="Spots logo" class="header__logo" />
       </header>
       <main class="content">
         <section class="profile page__section">
@@ -41,8 +37,63 @@
             <img src="./images/plus.svg" alt="Plus icon" />New Post
           </button>
         </section>
-        <section class="cards">
+        <section class="cards page__section">
           <ul class="cards__list">
+            <li class="card">
+              <img
+                src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
+                alt="Val Thorens"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Val Thorens</h2>
+                <button type="button" class="card__heart-icon"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
+                alt="Val Thorens"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Val Thorens</h2>
+                <button type="button" class="card__heart-icon"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
+                alt="Val Thorens"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Val Thorens</h2>
+                <button type="button" class="card__heart-icon"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
+                alt="Val Thorens"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Val Thorens</h2>
+                <button type="button" class="card__heart-icon"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
+                alt="Val Thorens"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Val Thorens</h2>
+                <button type="button" class="card__heart-icon"></button>
+              </div>
+            </li>
             <li class="card">
               <img
                 src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
