--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
           </ul>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <p class="footer__copyright">2025 &copy; Spots</p>
+      </footer>
     </div>
   </body>
 </html>
