Create initial modal

--- a/index.html
+++ b/index.html
@@ -111,6 +111,30 @@
       <footer class="footer">
         <p class="footer__copyright">2025 &copy; Spots</p>
       </footer>
+      <div class="modal modal_is-opened">
+        <div class="modal__container">
+          <button class="modal__close-btn" type="button">x</button>
+          <h2 class="modal__title">Edit Profile</h2>
+          <form class="modal__form">
+            <label for="profile-name-input" class="modal__label"
+              >Name<input
+                id="profile-name-input"
+                type="text"
+                class="modal__input"
+                placeholder="Type your name"
+            /></label>
+            <label for="profile-desc-input" class="modal__label"
+              >Description
+              <input
+                id="profile-desc-input"
+                type="text"
+                class="modal__input"
+                placeholder="Describe yourself"
+            /></label>
+            <button class="modal__submit" type="submit">Save</button>
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
