Create modal styles

--- a/index.html
+++ b/index.html
@@ -113,8 +113,12 @@
       </footer>
       <div class="modal modal_is-opened">
         <div class="modal__container">
-          <button class="modal__close-btn" type="button">x</button>
-          <h2 class="modal__title">Edit Profile</h2>
+          <div class="modal__header">
+            <h2 class="modal__title">Edit profile</h2>
+            <button class="modal__close-btn" type="button">
+              <img src="./images/close-x.png" alt="x-icon" />
+            </button>
+          </div>
           <form class="modal__form">
             <label for="profile-name-input" class="modal__label"
               >Name<input
