--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <footer class="footer">
         <p class="footer__copyright">2025 &copy; Spots</p>
       </footer>
-      <div class="modal modal_is-opened">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <div class="modal__header">
             <h2 class="modal__title">Edit profile</h2>
@@ -139,7 +139,7 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_is-opened">
+      <div class="modal" id="new-post-modal">
         <div class="modal__container">
           <div class="modal__header">
             <h2 class="modal__title">New post</h2>
