:sparkles:Add new post form elements and listener

--- a/index.html
+++ b/index.html
@@ -121,12 +121,14 @@
           </div>
           <form class="modal__form">
             <label for="profile-name-input" class="modal__label"
-              >Name<input
+              >Name
+              <input
                 id="profile-name-input"
                 type="text"
                 class="modal__input"
                 placeholder="Type your name"
-            /></label>
+              />
+            </label>
             <label for="profile-desc-input" class="modal__label"
               >Description
               <input
@@ -134,7 +136,8 @@
                 type="text"
                 class="modal__input"
                 placeholder="Describe yourself"
-            /></label>
+              />
+            </label>
             <button class="modal__submit" type="submit">Save</button>
           </form>
         </div>
@@ -148,13 +151,14 @@
             </button>
           </div>
           <form class="modal__form">
-            <label for="card-image-input" class="modal__label"
-              >Image link<input
+            <label for="card-image-input" class="modal__label">
+              Image link<input
                 id="card-image-input"
                 type="url"
                 class="modal__input"
                 placeholder="Paste a link to the picture"
-            /></label>
+              />
+            </label>
             <label for="card-caption-input" class="modal__label"
               >Caption
               <input
@@ -162,7 +166,8 @@
                 type="text"
                 class="modal__input"
                 placeholder="Type your caption"
-            /></label>
+              />
+            </label>
             <button class="modal__submit" type="submit">Save</button>
           </form>
         </div>
