:sparkles:Create template in html for cards and declare in script for get card function

--- a/index.html
+++ b/index.html
@@ -39,18 +39,16 @@
         </section>
         <section class="cards page__section">
           <ul class="cards__list">
-            <li class="card">
-              <img
-                src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
-                alt="Val Thorens"
-                class="card__image"
-              />
-              <div class="card__content">
-                <h2 class="card__title">Val Thorens</h2>
-                <button type="button" class="card__heart-icon"></button>
-              </div>
-            </li>
-            <li class="card">
+            <template id="card-template">
+              <li class="card">
+                <img src="#" alt="" class="card__image" />
+                <div class="card__content">
+                  <h2 class="card__title"></h2>
+                  <button type="button" class="card__heart-icon"></button>
+                </div>
+              </li>
+            </template>
+            <!-- <li class="card">
               <img
                 src="./images/2-photo-by-ceiline-from-pexels.jpg"
                 alt="Restaurant terrace"
@@ -104,7 +102,7 @@
                 <h2 class="card__title">Mountain house</h2>
                 <button type="button" class="card__heart-icon"></button>
               </div>
-            </li>
+            </li> -->
           </ul>
         </section>
       </main>
