--- a/index.html
+++ b/index.html
@@ -116,6 +116,19 @@
           </form>
         </div>
       </div>
+      <div class="modal modal_is-opened" id="image-preview-modal">
+        <div class="modal__image-container">
+          <button class="modal__close-btn" type="button">
+            <img src="./images/close-x.png" alt="x-icon" />
+          </button>
+          <img
+            src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/7-photo-by-griffin-wooldridge-from-pexels.jpg"
+            alt=""
+            class="modal__image"
+          />
+          <p class="modal__caption">Golden Gate Bridge</p>
+        </div>
+      </div>
     </div>
     <script src="./scripts/index.js"></script>
   </body>
