Style image preview modal

--- a/index.html
+++ b/index.html
@@ -116,10 +116,16 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_is-opened" id="image-preview-modal">
+      <div
+        class="modal modal_type_image-preview modal_is-opened"
+        id="image-preview-modal"
+      >
         <div class="modal__image-container">
-          <button class="modal__close-btn" type="button">
-            <img src="./images/close-x.png" alt="x-icon" />
+          <button
+            class="modal__close-btn modal__close_type_preview"
+            type="button"
+          >
+            <img src="./images/image-close.png" alt="x-icon" />
           </button>
           <img
             src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/7-photo-by-griffin-wooldridge-from-pexels.jpg"
