--- a/index.html
+++ b/index.html
@@ -116,10 +116,7 @@
           </form>
         </div>
       </div>
-      <div
-        class="modal modal_type_image-preview modal_is-opened"
-        id="image-preview-modal"
-      >
+      <div class="modal modal_type_image-preview" id="image-preview-modal">
         <div class="modal__image-container">
           <button
             class="modal__close-btn modal__close_type_preview"
@@ -127,12 +124,8 @@
           >
             <img src="./images/image-close.png" alt="x-icon" />
           </button>
-          <img
-            src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/7-photo-by-griffin-wooldridge-from-pexels.jpg"
-            alt=""
-            class="modal__image"
-          />
-          <p class="modal__caption">Golden Gate Bridge</p>
+          <img src="#" alt="" class="modal__image" />
+          <p class="modal__caption"></p>
         </div>
       </div>
     </div>
