Customize default profile

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/avatar.jpg"
+            src="./images/scp-engineering.png"
             alt="Profile image"
             class="profile__avatar"
           />
           <div class="profile__column">
-            <h1 class="profile__name">Bessie Coleman</h1>
-            <p class="profile__description">Civil Aviator</p>
+            <h1 class="profile__name">Link Nelson</h1>
+            <p class="profile__description">Nerd Extraordinare</p>
             <button type="button" class="profile__edit-btn">
               <img src="./images/pencil.svg" alt="Pencil icon" />Edit Profile
             </button>
