--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_type_image-preview" id="image-preview-modal">
-        <div class="modal__image-container">
+      <div class="modal modal_type_image_preview" id="image-preview-modal">
+        <div class="modal__image_container">
           <button
             class="modal__close-btn modal__close_type_preview"
             type="button"
