Change heart btn name, declare cardelement with let instead of const

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <img src="#" alt="" class="card__image" />
                 <div class="card__content">
                   <h2 class="card__title"></h2>
-                  <button type="button" class="card__heart-icon"></button>
+                  <button type="button" class="card__heart-btn"></button>
                 </div>
               </li>
             </template>
