--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
                 type="text"
                 class="modal__input"
                 placeholder="Type your name"
+                required
+                minlength="2"
+                maxlength="40"
               />
+              <span class="modal__error">!Error!</span>
             </label>
             <label for="profile-desc-input" class="modal__label"
               >Description
@@ -80,7 +84,11 @@
                 type="text"
                 class="modal__input"
                 placeholder="Describe yourself"
+                required
+                minlength="2"
+                maxlength="200"
               />
+              <span class="modal__error">!Error!</span>
             </label>
             <button class="modal__submit" type="submit">Save</button>
           </form>
@@ -101,7 +109,9 @@
                 type="url"
                 class="modal__input"
                 placeholder="Paste a link to the picture"
+                required
               />
+              <span class="modal__error">!Error!</span>
             </label>
             <label for="card-caption-input" class="modal__label"
               >Caption
@@ -110,7 +120,11 @@
                 type="text"
                 class="modal__input"
                 placeholder="Type your caption"
+                required
+                minlength="2"
+                maxlength="30"
               />
+              <span class="modal__error">!Error!</span>
             </label>
             <button class="modal__submit" type="submit">Save</button>
           </form>
