--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 minlength="2"
                 maxlength="40"
               />
-              <span class="modal__error">!Error!</span>
+              <span id="profile-name-input-error" class="modal__error"></span>
             </label>
             <label for="profile-desc-input" class="modal__label"
               >Description
@@ -88,7 +88,7 @@
                 minlength="2"
                 maxlength="200"
               />
-              <span class="modal__error">!Error!</span>
+              <span id="profile-desc-input-error" class="modal__error"></span>
             </label>
             <button class="modal__submit" type="submit">Save</button>
           </form>
@@ -111,7 +111,7 @@
                 placeholder="Paste a link to the picture"
                 required
               />
-              <span class="modal__error">!Error!</span>
+              <span id="card-image-input-error" class="modal__error"></span>
             </label>
             <label for="card-caption-input" class="modal__label"
               >Caption
@@ -124,7 +124,7 @@
                 minlength="2"
                 maxlength="30"
               />
-              <span class="modal__error">!Error!</span>
+              <span id="card-caption-input-error" class="modal__error"></span>
             </label>
             <button class="modal__submit" type="submit">Save</button>
           </form>
@@ -143,6 +143,7 @@
         </div>
       </div>
     </div>
+    <script src="./scripts/validation.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
