Create toggle button state for disabling submit button when there are invalid inputs

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <img src="./images/close-x.png" alt="x-icon" />
             </button>
           </div>
-          <form class="modal__form">
+          <form class="modal__form" novalidate>
             <label for="profile-name-input" class="modal__label"
               >Name
               <input
@@ -102,7 +102,7 @@
               <img src="./images/close-x.png" alt="x-icon" />
             </button>
           </div>
-          <form class="modal__form">
+          <form class="modal__form" novalidate>
             <label for="card-image-input" class="modal__label">
               Image link<input
                 id="card-image-input"
