Disable and reset validation of modals when closed

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
               />
               <span id="profile-desc-input-error" class="modal__error"></span>
             </label>
-            <button class="modal__submit" type="submit">Save</button>
+            <button class="modal__submit" id="profile-submit" type="submit">
+              Save
+            </button>
           </form>
         </div>
       </div>
@@ -126,7 +128,9 @@
               />
               <span id="card-caption-input-error" class="modal__error"></span>
             </label>
-            <button class="modal__submit" type="submit">Save</button>
+            <button class="modal__submit" id="card-submit" type="submit">
+              Save
+            </button>
           </form>
         </div>
       </div>
