:construction:Create avatar edit modal and start setting up the handler for submission

--- a/src/index.html
+++ b/src/index.html
@@ -161,6 +161,33 @@
           <p class="modal__caption"></p>
         </div>
       </div>
+      <div class="modal" id="edit-avatar-modal">
+        <div class="modal__container">
+          <div class="modal__header">
+            <h2 class="modal__title">Edit profile avatar</h2>
+            <button class="modal__close-btn" type="button">
+              <img src="<%=require('./images/close-x.png')%>" alt="x-icon" />
+            </button>
+          </div>
+          <form class="modal__form" novalidate>
+            <label for="profile-avatar-input" class="modal__label"
+              >Profile Picture
+              <input
+                id="profile-avatar-input"
+                name="avatar"
+                type="url"
+                class="modal__input"
+                placeholder="Paste the link to an image"
+                required
+              />
+              <span id="profile-avatar-input-error" class="modal__error"></span>
+            </label>
+            <button class="modal__submit" id="profile-submit" type="submit">
+              Save
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
