--- a/src/index.html
+++ b/src/index.html
@@ -188,6 +188,22 @@
           </form>
         </div>
       </div>
+      <div class="modal" id="delete-modal">
+        <div class="modal__container">
+          <div class="modal__header">
+            <h2 class="modal__title">
+              Are you sure you want to delete this image?
+            </h2>
+            <button class="modal__close-btn" type="button">
+              <img src="<%=require('./images/close-x.png')%>" alt="x-icon" />
+            </button>
+          </div>
+          <form class="modal__form" id="delete-form" novalidate>
+            <button class="modal__submit" type="submit">Delete</button>
+            <button class="modal__submit" type="button">Cancel</button>
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
