--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_is-opened" id="delete-modal">
+      <div class="modal" id="delete-modal">
         <div class="modal__container delete_container">
           <div class="modal__header">
             <h2 class="modal__title delete_title">
@@ -205,14 +205,14 @@
               />
             </button>
           </div>
-          <div class="delete__modal-btns">
+          <form class="delete__modal-btns" id="delete-form">
             <button class="modal__submit btn_delete" type="submit">
               Delete
             </button>
             <button class="modal__submit btn_cancel" type="button">
               Cancel
             </button>
-          </div>
+          </form>
         </div>
       </div>
     </div>
