Add loading text to avatar modal and move preview/delete modals to modal.css

--- a/src/index.html
+++ b/src/index.html
@@ -161,6 +161,44 @@
           <p class="modal__caption"></p>
         </div>
       </div>
+      <!-- <div class="modal" id="edit-post-modal">
+        <div class="modal__container">
+          <div class="modal__header">
+            <h2 class="modal__title">Edit Post</h2>
+            <button class="modal__close-btn" type="button">
+              <img src="<%=require('./images/close-x.png')%>" alt="x-icon" />
+            </button>
+          </div>
+          <form class="modal__form" novalidate>
+            <label for="card-image-input" class="modal__label">
+              Image link<input
+                id="card-image-input"
+                type="url"
+                class="modal__input"
+                placeholder="Paste a link to the picture"
+                required
+              />
+              <span id="card-image-input-error" class="modal__error"></span>
+            </label>
+            <label for="card-caption-input" class="modal__label"
+              >Caption
+              <input
+                id="card-caption-input"
+                type="text"
+                class="modal__input"
+                placeholder="Type your caption"
+                required
+                minlength="2"
+                maxlength="30"
+              />
+              <span id="card-caption-input-error" class="modal__error"></span>
+            </label>
+            <button class="modal__submit" id="card-submit" type="submit">
+              Save
+            </button>
+          </form>
+        </div>
+      </div> -->
       <div class="modal" id="edit-avatar-modal">
         <div class="modal__container">
           <div class="modal__header">
