Apply handleserverresponse function to apis and rename delete button

--- a/src/index.html
+++ b/src/index.html
@@ -244,7 +244,7 @@
             </button>
           </div>
           <form class="delete__modal-btns" id="delete-form">
-            <button class="modal__submit btn_delete" type="submit">
+            <button class="modal__submit modal__delete-btn" type="submit">
               Delete
             </button>
             <button class="modal__submit btn_cancel" type="button">
